--- a/Car1.html
+++ b/Car1.html
@@ -72,7 +72,7 @@
                         <ul class="car_list_characteristics">
                             <li>
                                 <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">Manual</span>
+                                <span title="Manual">automatic</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-gas-pump"></i>
@@ -107,19 +107,19 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="viosB.html" class="car_img_content_link">
+                            <a href="innova.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://img2.pic.in.th/pic/f969fb4cb39103273167b80f1b6e2af1.jpg" alt="Toyota Vios">
+                                    <img src="" alt="Toyota Innova">
                                 </figure>
                             </a>
                         </div>
                         <div>
                             <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="viosB.html" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">Vios</h2>
+                                <a href="innova.html" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Innova</h2>
                                 </a>
-                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         <ul class="car_list_characteristics">
                             <li>
                                 <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">Manual</span>
+                                <span title="Manual">automatic</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-gas-pump"></i>
@@ -135,10 +135,10 @@
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
-                                <span title="5">5</span>
+                                <span title="5">7</span>
                             </li>
                             <li>
-                                <a href="viosB.html">
+                                <a href="innova.html">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
