--- a/Car1.html
+++ b/Car1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="index.html"><img src="https://img2.pic.in.th/pic/22970b258ea55b6a22e0f79b09d03ef7.png" width="125px" class="logo" alt=""></a>
+        <a href="index.html"><img src="https://i.postimg.cc/JzCmzrRm/Eng-removebg-preview.png" width="125px" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -109,7 +109,7 @@
                         <div class="car_body_img_container">
                             <a href="innova.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="" alt="Toyota Innova">
+                                    <img src="https://img5.pic.in.th/file/secure-sv1/223483.jpg" alt="Toyota Innova">
                                 </figure>
                             </a>
                         </div>
@@ -159,7 +159,7 @@
 
     <footer class="section-p1">
         <div class="col">
-            <img src="https://img2.pic.in.th/pic/22970b258ea55b6a22e0f79b09d03ef7.png" width="125px" class="logo" alt="">
+            <img src="https://i.postimg.cc/JzCmzrRm/Eng-removebg-preview.png" width="125px" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address : </strong>35/93  ซอยสิวารัตน์ 1  ถนนบ้านปลายครองครุ  ม.4  ต.นาดี  อ.เมือง  จ.สมุทรสาคร  74000</p>
             <p><strong>Phone : </strong>081-9424507 (คุณแก้ว)</p>
