--- a/Deal.html
+++ b/Deal.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="index.html"><img src="https://img2.pic.in.th/pic/22970b258ea55b6a22e0f79b09d03ef7.png" width="125px" class="logo" alt=""></a>
+        <a href="index.html"><img src="https://i.postimg.cc/JzCmzrRm/Eng-removebg-preview.png" width="125px" class="logo" alt=""></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -25,8 +25,8 @@
             </ul>
         </div>
         <div id="mobile">
-            <a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="Account.html"><i class="fa-solid fa-user"></i></a>
+            <!--<a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="Account.html"><i class="fa-solid fa-user"></i></a>-->
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
@@ -38,6 +38,24 @@
         width="800" 
         height="500">
     </object>
+
+    <!--<section>
+        <div>
+            <img src="https://i.postimg.cc/Vv49VNL8/image.jpg" width="40%" class="dealimg" alt="">
+        </div>
+        <div>
+            <img src="https://i.postimg.cc/5NNSF8nN/image.jpg" width="40%" class="dealimg" alt="">
+        </div>
+        <div>
+            <img src="https://i.postimg.cc/nhXK3Zyy/image.jpg" width="40%" class="dealimg" alt="">
+        </div>
+        <div>
+            <img src="https://i.postimg.cc/RCTTFg1D/image.jpg" width="33%" class="dealimg" alt="">
+        </div>
+        <div class="last">
+            <img src="https://i.postimg.cc/5N7q5jR5/image.jpg" width="27%" class="dealimg" alt="">
+        </div>
+    </section>-->
 
     <!--<section class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
         <div class="Servicerentalrules">
@@ -88,7 +106,7 @@
     
     <footer class="section-p1">
         <div class="col">
-            <img src="https://img2.pic.in.th/pic/22970b258ea55b6a22e0f79b09d03ef7.png" width="125px" class="logo" alt="">
+            <img src="https://i.postimg.cc/JzCmzrRm/Eng-removebg-preview.png" width="125px" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address : </strong>35/93  ซอยสิวารัตน์ 1  ถนนบ้านปลายครองครุ  ม.4  ต.นาดี  อ.เมือง  จ.สมุทรสาคร  74000</p>
             <p><strong>Phone : </strong>081-9424507 (คุณแก้ว)</p>
