--- a/altisT2.html
+++ b/altisT2.html
@@ -158,14 +158,13 @@
             <img src="https://i.postimg.cc/JzCmzrRm/Eng-removebg-preview.png" width="125px" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address : </strong>35/93  ซอยสิวารัตน์ 1  ถนนบ้านปลายครองครุ  ม.4  ต.นาดี  อ.เมือง  จ.สมุทรสาคร  74000</p>
-            <p><strong>Phone : </strong>081-9424507 (คุณแก้ว)</p>
-            <p>098-2625255 (คุณโต้)</p>
+            <p><strong>Phone : </strong>081-9424507 (คุณแก้ว) 098-2625255 (คุณโต้)</p>
             <p><strong>Open : </strong> 06.00 - 18.00 Everyday</p>
             <div class="follow">
                 <h4>ติดตามเรา</h4>
                 <div class="icon">
-                    <i class="fab fa-facebook"></i>
-                    <i class="fab fa-line"></i>
+                    <a href="https://www.facebook.com/profile.php?id=100089833762334"><i class="fab fa-facebook"></i></a>
+                    <a href="https://line.me/ti/p/coPYvKE9VZ"><i class="fab fa-line"></i></a>
                 </div>
             </div>
         </div>
