--- a/Deal.html
+++ b/Deal.html
@@ -33,13 +33,13 @@
 
     <h1 class="Rule">เงื่อนไขการใช้บริการ</h1>
 
-    <object class="pdf" 
+    <!--<object class="pdf" 
         data="รถเช่ามหาชัย.pdf"
         width="800" 
         height="500">
-    </object>
+    </object>-->
 
-    <!--<section>
+    <section>
         <div>
             <img src="https://i.postimg.cc/Vv49VNL8/image.jpg" width="40%" class="dealimg" alt="">
         </div>
@@ -55,7 +55,7 @@
         <div class="last">
             <img src="https://i.postimg.cc/5N7q5jR5/image.jpg" width="27%" class="dealimg" alt="">
         </div>
-    </section>-->
+    </section>
 
     <!--<section class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
         <div class="Servicerentalrules">
@@ -109,14 +109,13 @@
             <img src="https://i.postimg.cc/JzCmzrRm/Eng-removebg-preview.png" width="125px" class="logo" alt="">
             <h4>Contact</h4>
             <p><strong>Address : </strong>35/93  ซอยสิวารัตน์ 1  ถนนบ้านปลายครองครุ  ม.4  ต.นาดี  อ.เมือง  จ.สมุทรสาคร  74000</p>
-            <p><strong>Phone : </strong>081-9424507 (คุณแก้ว)</p>
-            <p>098-2625255 (คุณโต้)</p>
+            <p><strong>Phone : </strong>081-9424507 (คุณแก้ว) 098-2625255 (คุณโต้)</p>
             <p><strong>Open : </strong> 06.00 - 18.00 Everyday</p>
             <div class="follow">
                 <h4>ติดตามเรา</h4>
                 <div class="icon">
                     <a href="https://www.facebook.com/profile.php?id=100089833762334"><i class="fab fa-facebook"></i></a>
-                    <a href="Deal.html"><i class="fab fa-line"></i></a>
+                    <a href="https://line.me/ti/p/coPYvKE9VZ"><i class="fab fa-line"></i></a>
                 </div>
             </div>
         </div>
