--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h4>ติดตามเรา</h4>
                 <div class="icon">
                     <a href="https://www.facebook.com/profile.php?id=100089833762334"><i class="fab fa-facebook"></i></a>
-                    <a href="Deal.html"><i class="fab fa-line"></i></a>
+                    <a href="https://line.me/ti/p/coPYvKE9VZ"><i class="fab fa-line"></i></a>
                 </div>
             </div>
         </div>
