--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="swiper.min.css">
+    <link rel="icon" type="image/x-icon" href="https://img5.pic.in.th/file/secure-sv1/-Eng-.png">
 </head>
 <body>
     <section id="header">
