--- a/altisK.html
+++ b/altisK.html
@@ -69,21 +69,21 @@
                         
                         
                         <form class="Form" onsubmit="sendemail(); reset(); return false">
-                            <div class="columnPB">
+                            <div class="columnPB1">
                                 <div class="inputbox">
                                     <label>ชื่อ</label>
-                                    <input type="text" id="Name" placeholder="Enter first name">
+                                    <input type="text" id="Name" placeholder="first name">
                                 </div>
                                 <div class="inputbox">
                                     <label>นามสกุล</label>
-                                    <input type="text" id="SurName" placeholder="Enter last name">
+                                    <input type="text" id="SurName" placeholder="last name">
                                 </div>
                             </div>
                             <label>Email Address</label>
-                            <input type="text" id="Email" placeholder="Email@gmail.com">
+                            <input type="email" id="Email" placeholder="Email@gmail.com">
                                 <label>เบอร์โทรศัพท์</label>
-                                <input type="text" id="Tel" placeholder="098-262-52XX">
-                            <div class="columnPB">
+                                <input type="tel" id="Tel" placeholder="098-262-52XX">
+                            <div class="columnPB2">
                                 <div class="inputbox">
                                     <label>วันเริ่มต้น</label>
                                     <input type="datetime-local" id="Start">
