--- a/Car1.html
+++ b/Car1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <link rel="stylesheet" href="Car.css">
     <link rel="stylesheet" href="swiper.min.css">
+    <link rel="icon" type="image/x-icon" href="https://img5.pic.in.th/file/secure-sv1/-Eng-.png">
 </head>
 <body>
     <section id="header">
@@ -22,8 +23,8 @@
             </ul>
         </div>
         <div id="mobile">
-            <a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="Account.html"><i class="fa-solid fa-user"></i></a>
+            <!--<a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="Account.html"><i class="fa-solid fa-user"></i></a>-->
             <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
