--- a/Deal.html
+++ b/Deal.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="Deal.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <link rel="icon" type="image/x-icon" href="https://img5.pic.in.th/file/secure-sv1/-Eng-.png">
 </head>
 <body>
     <section id="header">
@@ -150,5 +149,8 @@
             <p>Copyright © by Tapat Toungsakul 2024 </p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
+    <script src="swiper.min.js"></script>
 </body>
 </html>
