--- a/viosW.html
+++ b/viosW.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <link rel="stylesheet" href="productdetails.css">
     <link rel="stylesheet" href="swiper.min.css">
+    <link rel="icon" type="image/x-icon" href="https://img5.pic.in.th/file/secure-sv1/-Eng-.png">
 </head>
 <body>
     <section id="header">
@@ -68,21 +69,21 @@
                         
                         
                         <form class="Form" onsubmit="sendemail(); reset(); return false">
-                            <div class="columnPB">
+                            <div class="columnPB1">
                                 <div class="inputbox">
                                     <label>ชื่อ</label>
-                                    <input type="text" id="Name" placeholder="Enter first name">
+                                    <input type="text" id="Name" placeholder="first name">
                                 </div>
                                 <div class="inputbox">
                                     <label>นามสกุล</label>
-                                    <input type="text" id="SurName" placeholder="Enter last name">
+                                    <input type="text" id="SurName" placeholder="last name">
                                 </div>
                             </div>
                             <label>Email Address</label>
-                            <input type="text" id="Email" placeholder="Email@gmail.com">
+                            <input type="email" id="Email" placeholder="Email@gmail.com">
                                 <label>เบอร์โทรศัพท์</label>
-                                <input type="text" id="Tel" placeholder="098-262-52XX">
-                            <div class="columnPB">
+                                <input type="tel" id="Tel" placeholder="098-262-52XX">
+                            <div class="columnPB2">
                                 <div class="inputbox">
                                     <label>วันเริ่มต้น</label>
                                     <input type="datetime-local" id="Start">
@@ -104,6 +105,7 @@
                                         <label for="checkno">ไม่</label>
                                     </div>
                                 </div>
+                                <button class="btn btn-primary" onclick="sendMail()">Submit</button>
                             </div>
                             <button class="btn btn-primary" onclick="sendMail()">Submit</button>
                         </form>
