--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="accordion-item">
                 <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">มีบริการรับส่งหรือไม่?</span></button>
                 <div class="accordion-content">
-                    <p>ทางร้านมีบริการส่งรับ โดยจะมีเงื่อนไขและค่าบริการตามระยะทาง ซึ่งสามารถอ่านรายละเอียดได้ที่หน้าต่าง Deal Contract</p>
+                    <p>ทางร้านมีบริการรับส่ง โดยจะมีเงื่อนไขและค่าบริการตามระยะทาง ซึ่งสามารถอ่านรายละเอียดได้ที่หน้าต่าง Deal Contract</p>
                 </div>
             </div>
             <div class="accordion-item">
