--- a/index.html
+++ b/index.html
@@ -91,6 +91,239 @@
         </div>
     </section>
 
+    <!--<section id="product1">
+        <div class="containerofslide">
+            <div class="cardofslide">
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="dmax.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img2.pic.in.th/pic/20cf5e809eb225b6c6dfe7333a34e36f.jpg" alt="Isuzu Dmax">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Isuzu</p>
+                            <div class="car_price_container">
+                                <a href="dmax.html" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Dmax</h2>
+                                </a>
+                                <p class="car_price">900฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">Manual</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Diesel</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="dmax.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+            <div class="cardofslide activeofslide">
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Available for rent</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="celerio.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img2.pic.in.th/pic/4f231e38180382e8c8f9f7f9bdf297a8.jpg" width="100%" alt="Suzuki Celerio">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Suzuki</p>
+                            <div class="car_price_container">
+                                <a href="celerio.html" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Celerio</h2>
+                                </a>
+                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">Manual</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 91</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="celerio.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+            <div class="cardofslide">
+                <article class="card_ui">
+                        <div class="car_header">
+                            <div class="car_header_status">
+                                <div class="status_disponibility status_available">
+                                    <span>Disponible</span>
+                                </div>
+                            </div>
+                            <div>
+                                <button class="button_like">
+                                    <i class="far fa-heart"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="car_body">
+                            <div class="car_body_img_container">
+                                <a href="viosB.html" class="car_img_content_link">
+                                    <figure class="car_img_content">
+                                        <img src="https://img2.pic.in.th/pic/f969fb4cb39103273167b80f1b6e2af1.jpg" alt="Toyota Vios">
+                                    </figure>
+                                </a>
+                            </div>
+                            <div>
+                                <p class="car_name">Toyota</p>
+                                <div class="car_price_container">
+                                    <a href="viosB.html" class="car_model_link">
+                                        <h2 class="car_model" title="FOCUS">Vios</h2>
+                                    </a>
+                                    <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="car_footer">
+                            <ul class="car_list_characteristics">
+                                <li>
+                                    <i class="fa-solid fa-gears"></i>
+                                    <span title="Manual">automatic</span>
+                                </li>
+                                <li>
+                                    <i class="fa-solid fa-gas-pump"></i>
+                                    <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                </li>
+                                <li>
+                                    <i class="fas fa-user"></i>
+                                    <span title="5">5</span>
+                                </li>
+                                <li>
+                                    <a href="viosB.html">
+                                        <button class="rentbtn">
+                                            <p class="text">Go to book</p>
+                                        </button>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                </article>
+            </div>
+            <div class="cardofslide">
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_not_available">
+                                <span>No disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="viosT.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img5.pic.in.th/file/secure-sv1/baa38aaf1539d328be0e96c3c51a657c.jpg" alt="Toyota Vios">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="viosT.html" class="car_model_link">
+                                    <h2 class="car_model" title="FORTE">Vios</h2>
+                                </a>
+                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 91</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="viosT.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>-->
+
     <section id="FAQ" class="container">
         <h2>คำถามที่พบบ่อย</h2>
         <div class="accordion">
