--- a/Car.html
+++ b/Car.html
@@ -42,7 +42,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
@@ -97,7 +97,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_not_available">
-                                <span>No Disponible</span>
+                                <span>Unavailable</span>
                             </div>
                         </div>
                         <div>
@@ -152,7 +152,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Available for rent</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
@@ -207,7 +207,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
@@ -262,7 +262,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
@@ -317,7 +317,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
@@ -372,7 +372,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_not_available">
-                                <span>No disponible</span>
+                                <span>Unavailable</span>
                             </div>
                         </div>
                         <div>
@@ -427,7 +427,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
@@ -482,7 +482,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_not_available">
-                                <span>No Disponible</span>
+                                <span>Unavailable</span>
                             </div>
                         </div>
                         <div>
