--- a/Car1.html
+++ b/Car1.html
@@ -42,7 +42,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
@@ -97,7 +97,7 @@
                     <div class="car_header">
                         <div class="car_header_status">
                             <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                                <span>Available</span>
                             </div>
                         </div>
                         <div>
