--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </a>
         </div>
     </section>
-
-    <!--<section id="product1">
+    
+    <section id="product1">
         <div class="containerofslide">
             <div class="cardofslide">
                 <article class="card_ui">
@@ -322,7 +322,7 @@
                 </article>
             </div>
         </div>
-    </section>-->
+    </section>
 
     <section id="FAQ" class="container">
         <h2>คำถามที่พบบ่อย</h2>
