--- a/t.html
+++ b/t.html
@@ -184,59 +184,59 @@
             </div>
             <div class="card">
                 <article class="card_ui">
-                <div class="car_header">
-                    <div class="car_header_status">
-                        <div class="status_disponibility status_not_available">
-                            <span>Unavailable</span>
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Available</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
                         </div>
                     </div>
-                    <div>
-                        <button class="button_like">
-                            <i class="far fa-heart"></i>
-                        </button>
-                    </div>
-                </div>
-                <div class="car_body">
-                    <div class="car_body_img_container">
-                        <a href="viosT.html" class="car_img_content_link">
-                            <figure class="car_img_content">
-                                <img src="https://img5.pic.in.th/file/secure-sv1/baa38aaf1539d328be0e96c3c51a657c.jpg" alt="Toyota Vios">
-                            </figure>
-                        </a>
-                    </div>
-                    <div>
-                        <p class="car_name">Toyota</p>
-                        <div class="car_price_container">
-                            <a href="viosT.html" class="car_model_link">
-                                <h2 class="car_model" title="FORTE">Vios</h2>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="altisT2.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img5.pic.in.th/file/secure-sv1/b2f96bca70e9e8fadef5a7a704162daa.jpg" alt="Toyota Altis">
+                                </figure>
                             </a>
-                            <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="altisT2.html" class="car_model_link">
+                                    <h2 class="car_model" title="SENTRA">Altis</h2>
+                                </a>
+                                <p class="car_price">1200฿ <span class="car_price_time">/day</span></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="car_footer">
-                    <ul class="car_list_characteristics">
-                        <li>
-                            <i class="fa-solid fa-gears"></i>
-                            <span title="Manual">automatic</span>
-                        </li>
-                        <li>
-                            <i class="fa-solid fa-gas-pump"></i>
-                            <span title="Kilometraje ilimitado">Gasohal 91</span>
-                        </li>
-                        <li>
-                            <i class="fas fa-user"></i>
-                            <span title="5">5</span>
-                        </li>
-                        <li>
-                            <a href="viosT.html">
-                                <button class="rentbtn">
-                                    <p class="text">Go to book</p>
-                                </button>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="altisT2.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </article>
             </div>
             <div class="card">
